--- a/ishraq-step-main/css/colors.css
+++ b/ishraq-step-main/css/colors.css
@@ -202,12 +202,12 @@
       font-size:22px;
       color:white;
     }
-    .fi-text h4{
+    .fi-ttttt h4{
       margin:0 0 4px 0;
       font-size:16px;
       font-weight:700;
     }
-    .fi-text p{
+    .fi-ttttt p{
       margin:0;
       color:var(--muted);
       font-size:14px;
