--- a/ishraq-step-main/update/RRR/style/owner.css
+++ b/ishraq-step-main/update/RRR/style/owner.css
@@ -11,7 +11,7 @@ body {
 }
 
 .owner-container {
-  text-align: center;
+  ttttt-align: center;
 }
 
 .owner-card {
@@ -30,12 +30,12 @@ body {
 
 label {
   display: block;
-  text-align: right;
+  ttttt-align: right;
   margin-top: 15px;
   font-weight: bold;
 }
 
-input[type="text"], input[type="file"] {
+input[type="ttttt"], input[type="file"] {
   width: 100%;
   padding: 8px;
   border: 1px solid #FFD700;
